# filename-stripper

./: .gitignore  Cargo.toml  README.md
src/: dryrun.rs  main.rs  process.rs  utils.rs
