[package]
name = "filename-stripper"
version = "0.1.1"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"]}
